--- a/DiabeticDiary.Web/Views/Home/Index.cshtml
+++ b/DiabeticDiary.Web/Views/Home/Index.cshtml
@@ -6,18 +6,50 @@
 
 <!DOCTYPE html>
 
-<html ng-app="diabeticDiaryApp">
+<html ng-app="ddApp">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/angularjs")
-    @Scripts.Render("~/bundles/app")
+    
 </head>
 <body>
-<div>
-    {{"Hello " + "you"}}
-</div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <!--<li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>-->
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+    <div class="container">
+        <div class="content">
+            
+                <person-record-grid>
+                </person-record-grid>
+            </div>
+        
+    </div><!-- /.container -->
+
+    @Styles.Render("~/bundles/css")
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/angularjs")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/app")
+    <script type="text/javascript" src="~/Scripts/app/controllers/personRecord.js"></script>
+    <script type="text/javascript" src="~/Scripts/app/directives/personRecord.js"></script>
 </body>
 </html>
