--- a/DiabeticDiary.Web/Views/Home/Index.cshtml
+++ b/DiabeticDiary.Web/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
     </nav>
     <div class="container">
         <div class="content">
-            <a href="/add">Add</a>
+            <a href="/pr/add">Add</a>
             <div ng-view></div>
         </div>
 
